--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -17,7 +17,7 @@
         <div class="navbar-item">
           <div class="field is-grouped" style="overflow: auto;">
             <p class="control">
-              <a href="/about/" class="button is-link is-outlined">
+              <a class="button is-link is-outlined">
                 <span>About</span>
               </a>
             </p>
