for real about ændringer

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,7 +2,17 @@
 {% block body %}
 <div class="container has-text-centered" style="max-width: 960px;">
 <p class="title is-1">About</p>
-<p class="subtitle is-3">Airbnb Deanonymizer is a piece of software <strong>(in progress)</strong> made to deanonymize Airbnb listings. With access to this tool, real estate agents will have the ability to contact hosts of Airbnb properties, whether the intent is to buy the real estate, counsel the hosts in terms of maximizing their performance on Airbnb, or just for helping them sell their property etc.</p>
-
+<div id="questions">
+	<div class="q">
+		<p class="title is-3">Who are we?</p>
+	</div>
+	<div class="a">
+		<p class="subtitle is-3">Airbnb Deanonymizer is a piece of software <strong>(in progress)</strong> made to deanonymize Airbnb listings. With access to this tool, real estate agents will have the ability to contact hosts of Airbnb properties, whether the intent is to buy the real estate, counsel the hosts in terms of maximizing their performance on Airbnb, or just for helping them sell their property etc.</p>
 </div>
+</div>
+</div>
+{% endblock %}
+{% block scripts %}
+<link rel="stylesheet" href="/static/css/help.css">
+<script src="../static/js/help.js"></script>
 {% endblock %}
