--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -17,6 +17,11 @@
         <div class="navbar-item">
           <div class="field is-grouped" style="overflow: auto;">
             <p class="control">
+              <a href="/login/" class="button is-link is-outlined">
+                <span>Log in</span>
+              </a>
+            </p>
+            <p class="control">
               <a href="/about/" class="button is-link is-outlined">
                 <span>About</span>
               </a>
@@ -26,7 +31,7 @@
                 <span>Help</span>
               </a>
             </p>
-            <p class="control">
+           <p class="control">
               <a href="/settings" class="button is-link is-outlined">
                 <span id="cog" class="icon">
                   <i class="fa fa fa-cog"></i>
