--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -18,6 +18,6 @@
 </div>
 {% endblock %}
 {% block scripts %}
-<link rel="stylesheet" href="/static/css/help.css">
-<script src="../static/js/help.js"></script>
+<link rel="stylesheet" href="/static/css/about.css">
+<script src="../static/js/about.js"></script>
 {% endblock %}
