--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block body %}
 		<div class="columns">
-          <div id="explore-box" class="explore-box column is-auto has-text-centered">
+          <div id="login-box" class="login-box column is-auto has-text-centered">
               <p class="title is-1">Log in</p>
               <p class="title is-3">Embark on entrepreneurship</p>
-              <div id="explore-fields">
+              <div id="login-fields">
 	              <div class="field" id="location">
 	                <p class="control has-icons-left has-icons-right">
 	                  <input id="location-field" class="input is-info" type="location" placeholder='Username' {% if selected_address %} value="{{selected_address}}" {% endif %}>
@@ -18,7 +18,7 @@
 	              </div>
 	              <div class="field" id="location">
 	                <p class="control has-icons-left has-icons-right">
-	                  <input id="location-field" class="input is-info" type="location" placeholder='Password' {% if selected_address %} value="{{selected_address}}" {% endif %}>
+	                  <input id="location-field" class="input is-info" type="password" placeholder='Password' {% if selected_address %} value="{{selected_address}}" {% endif %}>
 	                  <span class="icon is-small is-left">
 	                    <i class="fa fa-globe"></i>
 	                  </span>
@@ -29,4 +29,5 @@
 	              </div>
 {% endblock %}
 {% block scripts %}
+<link rel="stylesheet" href="/static/css/login.css">
 {% endblock %}
