--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -27,6 +27,9 @@
 	                  </span>
 	                </p>
 	              </div>
+	          </div>
+	      </div>
+	  </div>
 {% endblock %}
 {% block scripts %}
 <link rel="stylesheet" href="/static/css/login.css">
