--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="content has-text-centered" id="footer-content">
         <p id="footer-text">
-          <strong >Sclean</strong> by Nicolaj Terndrup & Frederik Christoffersen
+          <strong >Sclean</strong> by Theo Lemle, Nicolaj Terndrup & Frederik Christoffersen
           <span class="icon is-small">
             <i class="fa fa-copyright"></i>
           </span><b>2020</b>
