--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,8 +1,3 @@
-.columns {
-	width: 100%;
-	margin: auto;
-}
-
 #explore-fields {
 	max-width: 300px;
 	margin: auto;
@@ -144,22 +139,33 @@ select.select option{
 }
 
 
-#map {
+#map-container {
 	margin: auto;
-	margin-bottom: 50px;
-	width: 50%;
-	height: 400px;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
-@media screen and (max-width: 768px) {
-	#map {
-	width: 85%;
-	height: 400px;
+#map, #explore-box {
+	position: absolute;
 }
+
+#map {
+	top: 0;
+  	left: 0;
+	min-height: 680px;
+	height: 100%;
+	width: 100%;
+	z-index: 0;
 }
 
 #explore-box {
+	top: 10px;
+  	left: 10px;
 	padding: 0;
-	width: 90%;
-	margin: auto;
+	width: 300px;
 }
+
+
+
+
