--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block body %}
-		<div class="columns">
-          
+          <div id="map-container">
+          <div id="map">
+          </div>
           <div id="explore-box" class="explore-box column is-auto has-text-centered">
-              <p class="title is-1">Explore</p>
               <div id="explore-fields">
 	              <div class="field" id="location">
 	                <p class="control has-icons-left has-icons-right">
@@ -89,15 +89,11 @@
 
           	</div>
           	<br>
-          	<a id="explore-button" class="form-button button is-link is-inverted is-outlined"><span>Explore</span></a>
                <br>
               <br>
-              <i><a id="feedback" class="feedback"></a></i>
-              <br>
           </div>
-     <div id="map">
-    </div>
-</div>
+        </div>
+        <br>
 
 {% endblock %}
 {% block scripts %}
@@ -120,10 +116,32 @@
             maxZoom: 13,
             minZoom: 2
          }).addTo(map);
-         map.attributionControl.setPrefix(''); // Don't show the 'Powered by Leaflet' text. Attribution overload
+         // Create additional Control placeholders
 
-         $(document).ready(function() {
-         setTimeout(function(){ map.invalidateSize()}, 250);
+  function addControlPlaceholders(map) {
+    var corners = map._controlCorners,
+        l = 'leaflet-',
+        container = map._controlContainer;
+
+    function createCorner(vSide, hSide) {
+        var className = l + vSide + ' ' + l + hSide;
+
+        corners[vSide + hSide] = L.DomUtil.create('div', className, container);
+    }
+
+    createCorner('verticalcenter', 'left');
+    createCorner('verticalcenter', 'right');
+}
+addControlPlaceholders(map);
+
+// Change the position of the Zoom Control to a newly created placeholder.
+map.zoomControl.setPosition('bottomright');
+
+// You can also put other controls in the same placeholder.
+
+map.attributionControl.setPrefix(''); // Don't show the 'Powered by Leaflet' text. Attribution overload
+$(document).ready(function() {
+setTimeout(function(){ map.invalidateSize()}, 250);
 
        });
        
