Login Page fix and about page customized

--- a/app/templates/help.html
+++ b/app/templates/help.html
@@ -7,13 +7,7 @@
 		<p class="title is-3">How to use</p>
 	</div>
 	<div class="a">
-		<p class="text subtitle is-5">To make use of the software, you'll first have to get the Airbnb listing id of the property that you wish to deanonymize. You can get that from the url of the listing as shown in the screen shot below.</p>
-
-		<img src="/static/images/tutorial-listing-id.png">
-		<br>
-		<p class="text subtitle is-5">After you've acquired the listing id, type it or paste it in the input box on <a href="/"><strong>the main page</strong></a> and click on the <i>Deanonymize</i> button as shown in the screen shot below.</p> 
-
-		<img src="/static/images/tutorial-main.png">
+		<p class="text subtitle is-5">We Need Help Ourselves</p> 
 	</div>
 </div>
 </div>
