--- a/app/static/css/help.css
+++ b/app/static/css/help.css
@@ -25,7 +25,7 @@
 	/*-moz-user-select: text;*/ /* Firefox */
 	/*-ms-user-select: text;*//* IE10+/Edge */
 	/*user-select: text;*/ /* Standard */
-	max-height: 500px;
+	max-height: 750px;
 	overflow-y: auto;
 	padding-right: 20px;
 	display:none;
@@ -34,6 +34,12 @@
 	border-top: solid 4px rgba(255,255,255,0.5);
 	padding-bottom: 20px;
 	border-bottom: solid 4px rgba(255,255,255,0.5);
+	border-left: solid 4px rgba(255,255,255,0.5);
+	border-right: solid 4px rgba(255,255,255,0.5);
+	width: 80%;
+	margin: auto;
+	margin-top: 50px;
+	backdrop-filter: blur(5px);
 }
 
 #questions {
