--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,52 +1,53 @@
+  
 {% extends "base.html" %}
 {% block body %}
 		<div class="columns">
-<<<<<<< HEAD
-          <div id="explore-box" class="explore-box column is-auto has-text-centered">
+          <div id="auth-box" class="auth-box column is-auto has-text-centered">
               <p class="title is-1">Log in</p>
-              <p class="title is-3">Embark on entrepreneurship</p>
-              <div id="explore-fields">
-=======
-          <div id="login-box" class="login-box column is-auto has-text-centered">
-              <p class="title is-1">Log in</p>
-              <p class="title is-3">Embark on entrepreneurship</p>
-              <div id="login-fields">
->>>>>>> 2f72acab009602ad1170454555116f0b44c55406
-	              <div class="field" id="location">
+              <p class="title is-4">Don't have a user yet? <a href="/register/">Sign Up</a></p>
+              <div id="auth-fields">
+	              <div class="field" id="username">
 	                <p class="control has-icons-left has-icons-right">
-	                  <input id="location-field" class="input is-info" type="location" placeholder='Username' {% if selected_address %} value="{{selected_address}}" {% endif %}>
+	                  <input id="username-field" class="input is-info" type="location" placeholder='Username'>
 	                  <span class="icon is-small is-left">
-	                    <i class="fa fa-globe"></i>
+	                    <i class="fa fa-id-card"></i>
 	                  </span>
 	                  <span class="icon is-small is-right">
 	                    <i class="fa fa-asterisk"></i>
 	                  </span>
 	                </p>
+	                <div id="feedback-username" class="feedback help level-left">
+        				<div class="message"></div>
 	              </div>
-	              <div class="field" id="location">
+	              </div>
+
+	              <div class="field" id="password">
 	                <p class="control has-icons-left has-icons-right">
-<<<<<<< HEAD
-	                  <input id="location-field" class="input is-info" type="location" placeholder='Password' {% if selected_address %} value="{{selected_address}}" {% endif %}>
-=======
-	                  <input id="location-field" class="input is-info" type="password" placeholder='Password' {% if selected_address %} value="{{selected_address}}" {% endif %}>
->>>>>>> 2f72acab009602ad1170454555116f0b44c55406
+	                  <input id="password-field" class="input is-info" type="password" placeholder='Password'>
 	                  <span class="icon is-small is-left">
-	                    <i class="fa fa-globe"></i>
+	                    <i class="fa fa-lock"></i>
 	                  </span>
 	                  <span class="icon is-small is-right">
 	                    <i class="fa fa-asterisk"></i>
 	                  </span>
 	                </p>
+	                <div id="feedback-password" class="feedback help level-left">
+        				<div class="message"></div>
 	              </div>
-<<<<<<< HEAD
-{% endblock %}
-{% block scripts %}
-=======
+	              </div>
+
+
 	          </div>
+
+
+	<br>
+
+	<a id="login-button" class="form-button button is-link is-inverted is-outlined"><span>Login</span></a>
+
 	      </div>
 	  </div>
 {% endblock %}
 {% block scripts %}
-<link rel="stylesheet" href="/static/css/login.css">
->>>>>>> 2f72acab009602ad1170454555116f0b44c55406
+<link rel="stylesheet" href="/static/css/auth.css">
+<script src="../static/js/auth.js"></script>
 {% endblock %}
