--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,5 +1,5 @@
 <section class="hero is-white is-small">
-  <nav class="navbar is-fixed-top">
+  <nav class="navbar">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
         <h6 href="/" class="subtitle"><strong>Sclean</strong></h6>
