no text-selection

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="loader"></div>
-  <div id="page" style="display: none;">
+  <div id="page" style="display: none;" class="noselect">
     {% include "navbar.html" %}
 
     {% if background %}
