--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,6 +1,7 @@
 #explore-fields {
 	max-width: 300px;
 	margin: auto;
+	margin: 7px;
 }
 
 .input-field {
@@ -157,13 +158,38 @@ select.select option{
 }
 
 #explore-box {
-	top: 10px;
-  	left: 10px;
+	top: 7px;
+  	left: 7px;
 	padding: 0;
+	margin: 0;
 	width: 300px;
+	height: 100%;
+	background-color: hsl(0, 0%, 96%);
+	border: solid lightgrey 3px;
+	border-radius: 5px;
 }
 
 #search-icon {
 	z-index: 10;
 	cursor: pointer;
+}
+
+#toggle-view-button {
+	position: absolute;
+	left: 297px;
+	top: 7px;
+	background-color: lightgrey;
+	width: 20px;
+	height: 40px;
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+
+#toggle-span-icon {
+margin: 0 auto;
+  position: absolute;
+  top: 5px;
+  left: -7px;
+  color: grey;
+  cursor: pointer;
 }
