--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -95,34 +95,18 @@ select.select option{
 	bottom: 0.5px;
 }
 
-#options-button {
-	cursor: pointer;
-	display: inline-block
-}
-
-
 #options-wrap {
-	top: 7px;
-	position:absolute;
-	z-index: 2;
 	padding-right: 20px;
-	display:none;
 	margin: auto;
 	margin-top: 20px;
 	}
 
 #options {
 	width: 280px;
-	max-height: 230px;
 	overflow-y: auto;
-	background-color: rgba(200,200,200,0.25);
-	top: 8px;
-	left: 10px;
 	margin: auto;
 	position: relative;
-	border-top: solid 4px rgba(255,255,255,0.5);
 	padding-bottom: 10px;
-	border-bottom: solid 4px rgba(255,255,255,0.5);
 }
 
 #up {
@@ -151,6 +135,7 @@ select.select option{
 }
 
 #map {
+	height: 100%;
 	top: 0;
   	left: 0;
 	width: 100%;
