--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -149,6 +149,69 @@ $(window).on("resize", function () {
    map.invalidateSize();
    $("#explore-box").height($(window).height()-80);
  }).trigger("resize");
+
+function explore() {
+
+  if ($("#location-field").val()) {
+
+  prepare_info_loading(1000);
+
+  var formData = new FormData();
+
+  formData.append("location", $("#location-field").val());
+  
+  if (0 <= $( "#radius-slider" ).slider("value") <= 999) {
+    formData.append("radius", $( "#radius-slider" ).slider( "value" ));
+  }
+
+  if ($("#skill").val()){
+    formData.append("skill", $("#skill").val());
+  }
+
+  if ($("#gender").val()) {
+   formData.append("gender", $("#gender").val());
+ }
+
+  if ($( "#age-slider" ).slider( "values", 0 ) > 13) {
+   formData.append("min_age", $( "#age-slider" ).slider( "values", 0 ));
+ }
+ if ($( "#age-slider" ).slider( "values", 1 ) < 100) {
+   formData.append("max_age", $( "#age-slider" ).slider( "values", 1 ));
+ }
+
+    $.post({
+      type: "POST",
+      url: "/main/",
+      data: formData,
+      processData: false,
+      contentType: false,
+      success(response) {
+        var response = JSON.parse(response);
+        if ($("#location-field").val()) {
+        swap_url(response["url"]);
+        }
+        var status = response["status"]; 
+        if (status === "Successfully explored") {
+          var info = response["info"];
+          console.log(info);
+          $("#results-text").text(JSON.stringify(info));
+          clear_info_loading();
+        }
+        else{
+          message(status, response["box_id"], true);
+          clear_info_loading();
+        }
+        
+          
+
+      }});
+}}
+
+$(document).on("click", "#search-button", function() {
+ 
+  explore();
+
+});
        
   </script>
 <script type="text/javascript">
