--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -97,7 +97,10 @@
 {% endblock %}
 {% block scripts %}
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
+<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
 <link rel="stylesheet" href="/static/css/main.css">
 <script src="../static/js/main.js"></script>
 <script type="text/javascript">
@@ -158,6 +161,9 @@ var proIcon = L.icon({
     popupAnchor:  [-2, 0] // point from which the popup should open relative to the iconAnchor
 });
 
+var markers = L.markerClusterGroup().addTo(map);
+
+
 function explore() {
 
   if ($("#location-field").val()) {
@@ -198,11 +204,12 @@ function explore() {
         if (status === "Successfully explored") {
           var info = response["info"];
           console.log(info);
-          for (var i = info.length - 1; i >= 0; i--) {
-            L.marker([info[i].lat, info[i].lng], {icon: proIcon}).addTo(map).bindPopup(info[i].name);;
-          }
+          info.forEach(function(marker) {
+            L.marker([marker.lat, marker.lng], {icon: proIcon}).addTo(markers).bindPopup(marker.name);
+          });
           var loc = response["loc"];
           map.panTo(new L.LatLng(loc.lat, loc.lng));
+          map.setZoom(loc.zoom);
           
         }
         
