--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -143,7 +143,11 @@ map.zoomControl.setPosition('bottomright');
 
 map.attributionControl.setPrefix(''); // Don't show the 'Powered by Leaflet' text. Attribution overload
 $(document).ready(function() {
-setTimeout(function(){ map.invalidateSize()}, 250);
+setTimeout(function(){ 
+  $("#map").height($(window).height()-55);map.invalidateSize();
+   $("#explore-box").height($(window).height()-80);
+
+}, 250);
 
        });
 
