primitive profile page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="/static/js/base.js"></script>
     <link rel="stylesheet" href="/static/css/base.css">
+    <script src="/static/js/navbar.js"></script>
     {% block head %}{% endblock %}
   </head>
   <body>
@@ -37,8 +39,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-    <script src="../static/js/base.js"></script>
     <script src="../static/js/navbar.js"></script>
+    <script src="../static/js/base.js"></script>
+    <link rel="stylesheet" href="../static/css/base.css">
     {% block scripts %}{% endblock %}
       </body>
 </html>
