--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,9 +1,6 @@
 <section class="hero is-white is-small">
-  <nav class="navbar">
+  <nav class="navbar is-fixed-top">
     <div class="navbar-brand">
-      <a class="navbar-item" href="/">
-        <h6 href="/" class="subtitle"><strong>Sclean</strong></h6>
-      </a>
       <div id="navbar-burger-id" class="navbar-burger burger" data-target="navbar-menu-id">
         <span></span>
         <span></span>
@@ -11,8 +8,6 @@
       </div>
     </div>
     <div id="navbar-menu-id" class="navbar-menu">
-      <div class="navbar-start">
-      </div>
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="field is-grouped" style="overflow: auto;">
