--- a/app/static/css/auth.css
+++ b/app/static/css/auth.css
@@ -26,7 +26,11 @@ a {
 }
 
 
-.info	{
+.a {
+	/*-webkit-user-select: text; */ /* Safari */        
+	/*-moz-user-select: text;*/ /* Firefox */
+	/*-ms-user-select: text;*//* IE10+/Edge */
+	/*user-select: text;*/ /* Standard */
 	max-height: 750px;
 	overflow-y: auto;
 	padding-right: 20px;
@@ -41,7 +45,8 @@ a {
 	width: 80%;
 	margin: auto;
 	margin-top: 50px;
-	backdrop-filter: blur(5px);}
+	backdrop-filter: blur(5px);
+}
 
 .feedback {
   width: 100%;
