--- a/app/templates/exonavbar.html
+++ b/app/templates/exonavbar.html
@@ -8,11 +8,20 @@
 
 <div id="navbar-menu-container-id">
 <div id="navbar-menu-id" class="field is-grouped">
+            {% if not current_user.is_authenticated %}
             <p class="control">
-              <a href="/login/" class="button is-link is-outlined">
+              <a href="/login?prev={{ request.path }}/" class="button is-link is-outlined">
                 <span>Log in</span>
               </a>
             </p>
+            {% else %}
+            <p class="control">
+              <a href="/logout?prev={{ request.path }}" class="button is-link is-outlined">
+                <span>Log out</span>
+              </a>
+            </p>
+            {% endif %}
+
             <p class="control">
               <a href="/about/" class="button is-link is-outlined">
                 <span>About</span>
