--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,11 +3,11 @@
 		<div class="columns">
           <div id="auth-box" class="auth-box column is-auto has-text-centered">
               <p class="title is-1">Log in</p>
-              <p class="title is-4">Don't have a user yet? <a href="/register/">Sign Up</a></p>
+              <p class="subtitle is-4">Don't have a user yet? <strong><a href="/register/">Sign Up</a></strong></p>
               <div id="auth-fields">
-	              <div class="field" id="username">
+	              <div class="field" id="username-box">
 	                <p class="control has-icons-left has-icons-right">
-	                  <input id="username-field" class="input is-info" type="location" placeholder='Username'>
+	                  <input id="username" class="input is-info" type="location" placeholder='Username'>
 	                  <span class="icon is-small is-left">
 	                    <i class="fa fa-id-card"></i>
 	                  </span>
@@ -20,9 +20,9 @@
 	              </div>
 	              </div>
 
-	              <div class="field" id="password">
+	              <div class="field" id="password-box">
 	                <p class="control has-icons-left has-icons-right">
-	                  <input id="password-field" class="input is-info" type="password" placeholder='Password'>
+	                  <input id="password" class="input is-info" type="password" placeholder='Password'>
 	                  <span class="icon is-small is-left">
 	                    <i class="fa fa-lock"></i>
 	                  </span>
