--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -70,3 +70,11 @@ margin-top: 200px;
 	background: url(/static/images/loader-one.gif) center no-repeat #ffff;
 	background-size: 75%;
 }
+
+p.is-close {
+	margin-bottom: 7px !important;
+}
+
+.is-distant {
+	margin-top: 10px;
+}
