--- a/app/templates/help.html
+++ b/app/templates/help.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block body %}
+{% block content %}
 <div class="has-text-centered">
 <p class="title is-1">Help</p>
 <div id="questions">
