--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block body %}
+{% block content %}
           <div id="map-container">
           <div id="map">
           </div>
