--- a/app/templates/profile_page.html
+++ b/app/templates/profile_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block body %}
+{% block content %}
 <div valign="top" class="row" id="bigBox">
             <div  width="256px" class="column" id="leftBox">
               <div id="profile_pic">
