--- a/app/static/css/auth.css
+++ b/app/static/css/auth.css
@@ -11,6 +11,7 @@
 
 #auth-fields {
 	max-width: 300px;
+	height: 112px;
 	margin: auto;
 }
 
@@ -46,18 +47,34 @@ a {
 
 
 .feedback {
+  color: white;
   width: 100%;
   height: 5px;
   padding: 0;
-  margin: 0 auto;
   margin-top: 5px;
+  text-align: left;
+  font-weight: 500;
 }
+
+.center {
+	text-align: middle;
+}
+
+.left {
+	text-align: left;
+}
+
+.infotext {
+	max-width: 475px;
+}
+
+
 
 .feedback.message {
   width: 100%;
   height: 100%;
   padding: 0;
-  margin: 0 auto;
+  text-align: left;
 }
 
 .image {
@@ -74,4 +91,14 @@ a {
 
 .step-1 {
 	display: block;
+}
+
+.finally {
+	display: none;
+}
+
+@media (max-width:770px) {
+.feedback {
+  margin-top: -0.5px;
+}
 }
