--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
-{% block body %}
+{% block content %}
 		<div class="columns">
           <div id="auth-box" class="login-box column is-auto has-text-centered">
+          	<div class="step-1 step-2 step-3">
               <p class="title is-1">Sign Up</p>
               <p class="subtitle is-4">Already have a user? <strong><a href="/login/">Log in</a></strong></p>
+            
               <div id="auth-fields">
 
               	<div class="step-1">
@@ -21,7 +23,7 @@
               	<div class="field is-expanded" id="gender-box">
               	<div class='select'> 
         			<select id="gender"> 
-          			<option selected>Unknown</option>
+          			<option selected>Unspecified</option>
           			<option {% if current_user.gender == "Male" %} selected {% endif %}>Male</option>
          			<option {% if current_user.gender == "Female" %} selected {% endif %}>Female</option>
           			<option {% if current_user.gender == "Other" %} selected {% endif %}>Other</option>
@@ -106,11 +108,17 @@
 	              </div>
 	             </div>
 	          </div>
+	    </div>
+	    <div class="finally infotext">
+				<p class="title is-1">Authentication</p>
+				<p class="subtitle is-4 left">An email has now been sent. It can take up to 5 minutes to arrive. Please check your inbox and click on the provided link to activate your account.</p>
+				<p class="subtitle is-4 left">If you have not received the message by then, please resend the email by clicking the below button:</p>       
+		</div>
 
 
 	          <br>
 
-	<a id="register-button" class="form-button button is-link is-inverted is-outlined">
+	<a id="register-button" class="form-button button is-link is-inverted">
 		<div class="step-1 step-2">
 			<span>Next</span>
 			<span class="icon is-medium">
@@ -119,6 +127,12 @@
 		</div>
 		<div class="step-3">
 			<span>Finish</span>
+		</div>
+		<div class="finally">
+			<span>Resend</span>
+			<span class="icon is-medium">
+      			<i class="fa fa-envelope"></i>
+    		</span>
 		</div>
 	</a>
 
